Correct aligned borders for sections

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* # Genesis Sample Child Theme
-Theme Name: Plan Curtail by Listen to the Wind Media
+Theme Name: Plan Curtail 
 Theme URI: http://my.studiopress.com/themes/genesis/
 Description: This is the sample starter theme created for the Genesis Framework and slightly modified by @Sridhar to help with responsive+other. Nothing right now
-Author: StudioPress 
-Author URI: http://www.studiopress.com/ git test
+Author: Listen to the Wind Media 
+Author URI: http://www.listentothewindmedia.com/ 
 Template: genesis
 Template Version: 2.2.0
 Tags: black, orange, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
@@ -1970,21 +1970,18 @@ form.search-form input {
 /* # Borders for columns
 -------------------------------------------- */
 
-.lwm_last_widget.one-third {
-	border-left:1px dotted #515151; 
-	padding-left: 25px;
-}
 .lwm_feat_blog2.one-third, .lwm_feat_blog3.one-third {
 	border-left:1px dotted #515151;
 	padding-left: 31px;
 }
 
-/*.lwm_donate3 {
-	border-left:1px dotted #515151;
-	padding-left: 25px;
-
+.lwm-left-border {
+    border-left: 1px dotted #515151;
+    padding-left: 30px;
 }
-*/
+
+
+
 /* # Media Queries
 ---------------------------------------------------------------------------------------------------- */
 
